--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,28 @@ div {
     padding: 20px;
     background-color: black;
     color: black;
-}
-
-#navBar ul {
-  width: 100%;
-  font-size: 20px;
-  text-decoration: none;
+    width: 90%;
+    font-size: 20px;
+    text-decoration: none;
 }
 
 .activePage {
   background-color: blue;
+}
+
+article.bio {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.bioImage {
+  width: 150px;
+  display: inline;
+  border-radius: 100px;
+  text-align: center;
+  margin: 25px;
+  border: solid black 5px;
 }
 
 li {
