--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,11 @@ article div p {
 }
 /*NAV BAR STUFF END*/
 
+/*PAGE 3 STYLING*/
+.page3Pix {
+  width:100%;
+}
+
+.page3Head {
+  text-align: center;
+}
