updated styling for page 2 and fixed bugs in page 2

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ article div p {
 }
 /*NAV BAR STUFF END*/
 
+/*PAGE 2 STYLING START*/
+#FEMApic {
+ width: 150%;
+}
+/*PAGE 2 STYLING END*/
+
 /*PAGE 3 STYLING START*/
 .page3Pix {
   width:100%;
