--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ article div p {
 }
 /*NAV BAR STUFF END*/
 
+/*PAGE 1 ANIMATION*/
+.animQList {
+  text-align: center;
+}
+/*PAGE 1 ANIMATION*/
+
 /*PAGE 2 STYLING START*/
 #FEMApic {
  width: 150%;
@@ -101,6 +107,11 @@ article div p {
 /*PAGE 2 STYLING END*/
 
 /*PAGE 3 STYLING START*/
+section p {
+  font-size: 20px;
+  text-align: left;
+}
+
 .page3Pix {
   width:100%;
 }
